# hgame-launcher

./: .gitignore  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
src/: App.tsx  bindings.ts
src-tauri/: .env  Cargo.toml  build.rs  tauri.conf.json
src-tauri/entity/src/models/: brand.rs  config.rs  game.rs  mod.rs  prelude.rs
src-tauri/erogamescape-api/: Cargo.toml
src-tauri/erogamescape-api/src/: error.rs  lib.rs
src-tauri/erogamescape-api/src/api/sql/: mod.rs
src-tauri/erogamescape-api/src/api/sql/deserializer/: enum.rs  error.rs  map.rs  mod.rs
src-tauri/erogamescape-api/src/api/sql/test_data/: error_1.html  success_1.html
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: m20220101_000001_create_table.rs
src-tauri/src/: main.rs
src-tauri/src/commands/: config.rs  mod.rs  scan.rs
src-tauri/src/db/: config.rs  mod.rs  scan.rs
src-tauri/src/interface/: config.rs  game.rs
src/page/: layout.tsx
