[package]
name = "hgame-launcher"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["system-tray", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
specta = "1.0.5"
thiserror = "1.0.48"
reqwest = "0.11.20"
erogamescape-api = { path = "./erogamescape-api" }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
dirs = "5"
anyhow = "1.0.75"
tauri-specta = { version = "1.0.2", features = ["javascript", "typescript"] }
chrono = "0.4.29"
futures = "0.3.28"
tokio = { workspace = true }
sea-orm = { workspace = true }
migration = { path = "./migration" }
entity = { path = "./entity" }

[features]
custom-protocol = ["tauri/custom-protocol"]

[workspace]
members = [".", "erogamescape-api", "migration", "entity"]

[workspace.dependencies]
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
sea-orm = { version = "0.12", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
  "with-chrono",
] }
